UCF-APR2.4/ftr main/force-app/main/default/objects/FormNode__c/FormNode__c.object-meta.xml
<CustomObject>
    <description>Additional Nodes</description>
    <label>FormNode</label>
    <nameField>
        <displayFormat>FN-{00000000}</displayFormat>
        <label>FormNode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormNode</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>