UCF-APR2.4/ftr main/force-app/main/default/objects/FormNode__c/fields/FormData_Product__c.field-meta.xml
<CustomField>
    <fullName>FormData_Product__c</fullName>
    <label>FormData Product</label>
    <referenceTo>FormData_Product__c</referenceTo>
    <relationshipLabel>FormNode</relationshipLabel>
    <relationshipName>FormNode</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>