UCF-APR2.4/ftr main/force-app/main/default/objects/FormNode__c/fields/ZIP__c.field-meta.xml
<CustomField>
    <fullName>ZIP__c</fullName>
    <description>5 digit or 9 digit code.</description>
    <label>ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>